k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend
  labels:
    app: mern-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-backend
  template:
    metadata:
      labels:
        app: mern-backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      
      containers:
      - name: backend-app
        image: rimisarker/mern-backend:prod-5
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false 
          capabilities:
            drop:
            - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: mern-backend-service
  labels:
    app: mern-backend
spec:
  type: ClusterIP # Keeps backend securely accessible only inside the cluster
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: mern-backend
