k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-cluster-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # MERN Backend API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: mern-backend-service
            port:
              number: 5000

      # MERN Frontend App
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mern-frontend-service
            port:
              number: 80
